# dysvunctional-language

./: .gitignore  .gitmodules  Makefile  README  README.md  Rakefile  datastructures.scm  environments.scm  eval.scm  fol.hs  load.scm  macros.scm  notes.org  run-tests
FOL/: README  Rakefile  dvl  fol.cabal  fol2fol.hs  fol2haskell.hs  fol2hs.hs  fol2js.hs
FOL/FOL/Compiler/Haskell/: CodeGen.hs  Syntax.hs
FOL/FOL/Compiler/JavaScript/: CodeGen.hs  Expression.hs  Parser.hs  Syntax.hs
FOL/FOL/Language/: Anf.hs  Expression.hs  Feedback.hs  Parser.hs  Pretty.hs  Token.hs  TypeCheck.hs  Unique.hs
FOL/Language/: AlphaRn.hs  Common.hs  Feedback.hs  Token.hs  TypeCheck.hs
FOL/Optimize/: Cse.hs  Inline.hs  Optimize.hs  Sra.hs
FOL/examples/: Rakefile
FOL/scm/: dvl-wrapper.scm  fol-test.scm  load.scm
Language/: AlphaRn.hs  Anf.hs  Common.hs  Expression.hs  Feedback.hs  Parser.hs  Pretty.hs  Rename.hs  Tidy.hs  Token.hs  TypeCheck.hs  Unique.hs
Optimize/: BallOfHair.hs  Cse.hs  Inline.hs  Optimize.hs  Sra.hs
dvl/: .gitignore  Makefile  README  abstract-eval.scm  abstract-values.scm  analysis.scm  benchmarking.scm  code-generator.scm  data.scm  dvl  dvl-benchmarks  dvl-watch-benchmark  dvl2fol  entry-point.scm  env.scm  errors.scm  eval.scm  example-opt.scm  foo.scm  letrec.scm  load.scm  planets.scm  primitives.scm  read.scm  richardson.scm  stdlib.dvl  syntax.scm  work-list.scm
flow/: abstract-data.scm  abstract.scm  code-generator.scm  data.scm  env.scm  eval.scm  load.scm  macro.scm  run.scm
fol/: .gitignore  Makefile  README.md  a-normal-form.scm  alpha-renaming.scm  asm-js.scm  backends.scm  common-lisp.scm  cse.scm  dead-code.scm  dead-types.scm  entry-point.scm  feedback-vertex-set.scm  fol  haskell.scm  inline.scm  inlinees.scm  lift-lets.scm  load.scm  mit-scheme.scm  nomenclature.scm  optimize.scm  primitives.scm  runtime.sc  runtime.scm  sra.scm  stages.scm  stalin.scm  structs.scm  syntax.scm  todo.txt  type-check.scm
haskell-fol/: README  Setup.hs  fol.cabal  fol2hs.hs  fol2js.hs  notes.org
jlad/: foo.jlad  jlad.clj
ls/: .gitignore  Makefile  README  idea.scm  run-tests
slad/: data.scm  env.scm  essential-examples.scm  eval.scm  forward-mode.scm  load.scm  macro.scm  os.scm  primitives.scm  read.scm  run-slad  slad.scm  stdlib.slad  syntax.scm  todo.txt
support/: auto-compilation.scm  hash-tables.scm  load.scm  pattern-matching.scm  (+3 more)
(+366 files in other folders)
