Name:          FOL
Version:       0.1
Build-Type:    Simple
Cabal-Version: >= 1.2

Executable fol2fol
  Build-Depends: base, mtl, pretty, parsec, containers, syb, uniplate
  Main-Is:       fol2fol.hs

Executable fol2haskell
  Build-Depends: base, mtl, pretty, parsec, containers, syb, uniplate
  Main-Is:       fol2haskell.hs
