-- ----------------------------------------------------------------------
-- Copyright 2010-2011 National University of Ireland.
-- ----------------------------------------------------------------------
-- This file is part of DysVunctional Language.
-- 
-- DysVunctional Language is free software; you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
--  License, or (at your option) any later version.
-- 
-- DysVunctional Language is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
-- 
-- You should have received a copy of the GNU Affero General Public License
-- along with DysVunctional Language.  If not, see <http://www.gnu.org/licenses/>.
-- ----------------------------------------------------------------------

Name:          FOL
Version:       0.2
Build-Type:    Simple
Cabal-Version: >= 1.2

Executable fol2hs
  Build-Depends: base, mtl, pretty, parsec, containers, syb, uniplate
  Main-Is:       fol2hs.hs
  Extensions:    PatternGuards

Executable fol2js
  Build-Depends: base, mtl, pretty, parsec, containers, syb, uniplate
  Main-Is:       fol2js.hs
  Extensions:    PatternGuards
